--- a/package.json
+++ b/package.json
@@ -10,23 +10,23 @@
     "export": "next build"
   },
   "dependencies": {
+    "autoprefixer": "^10.4.17",
     "chart.js": "^4.4.8",
     "date-fns": "^4.1.0",
     "googleapis": "^133.0.0",
     "next": "14.1.0",
+    "postcss": "^8.4.35",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.3.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "tailwindcss": "^3.4.1"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "autoprefixer": "^10.4.17",
     "eslint": "^8.56.0",
     "eslint-config-next": "14.1.0",
-    "postcss": "^8.4.35",
-    "tailwindcss": "^3.4.1",
     "typescript": "^5.3.3"
   }
 }
