--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/react-dom": "^18",
     "eslint": "^8.56.0",
     "eslint-config-next": "14.1.0",
+    "postcss-nesting": "^13.0.1",
     "typescript": "^5.3.3"
   }
 }
